src/test/deca/syntax/invalid/test_synt/class/wrong_brackets_v2.deca
// Description:
//    Test de declaration d'une classe avec un nombre de braquets faux
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de syntax
//
// Historique:
//    cree le 19/01/2022



   class coordonnees{{
       int x;
       int y;
    }
{
}